--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>net.coreprotect</groupId>
-  <artifactId>CoreProtect</artifactId>
+  <artifactId>CoreProtect-Diamond</artifactId>
   <version>22.4</version>
   <properties>
     <project.branch></project.branch>
